[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismolib"
version = "24.1.0"
authors = [
    { name = "Takuto Maeda", email = "tktmyd@hirosaki-u.ac.jp" },
]
description = "Small Python codes to help with data analysis in seismology."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent", 
]
dependencies = [
    "pygmt>=0.12.0", 
    "obspy>=1.4.1", 
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0"
]
[project.urls]
Homepage = "https://github.com/tktmyd/seismolib"
#Issues = "https://github.com/tktmyd/seismolib/issues"

